--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@
     box-sizing: border-box;
     list-style: none;
     text-decoration: none;
-    outline: 1px solid red;
+    /* outline: 1px solid red; */
 }
 html, body {
   overflow-x: hidden;
